--- a/core/accounts/templates/accounts/password_reset_form.html
+++ b/core/accounts/templates/accounts/password_reset_form.html
@@ -1,15 +1,16 @@
 {% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
 
-{% block title %}{% trans "Reset password" %}{% endblock %}
+{% block title %}{% trans "Reset password" %} - {{ block.super }}{% endblock %}
 
 {% block content %}
-<form action="" method="post">
+<form action="" method="post" class="form form-horizontal">
+  {% csrf_token %}
   <fieldset>
     <legend>{% trans "Reset Password" %}</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|as_bootstrap }}
   </fieldset>
-  <input type="submit" value="{% trans "Send password" %}" />
+  <div class="form-actions">
+  	<input type="submit" value="{% trans "Send password" %}" class="btn btn-primary" />
+  </div>
 </form>
 {% endblock %}
