--- a/core/accounts/templates/accounts/signout.html
+++ b/core/accounts/templates/accounts/signout.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/base_accounts.html' %}
+{% extends 'base.html' %}
 
 {% block title %}{% trans "Signed out" %}{% endblock %}
 {% block content_title %}<h2>{% trans "You have been signed out" %}.</h2>{% endblock %}
