--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,24 +8,16 @@
 {% block body_class %}home{% endblock %}
 
 {% block banner %}
-    <h1>{% trans "Welcome to Pinax" %}</h1>
+    <h1>{% trans "Reuse Easily" %}</h1>
     <p>
         {% blocktrans %}
-        <b>Pinax</b> is a <a href="http://djangoproject.com/">Django</a>
-        project intended to provide a starting point for websites. By
-        integrating numerous reusable Django apps to take care of the
-        things that many sites have in common, it lets you focus on what
-        makes your site different.
+        Lobortis nisl ut, aliquip ex ea commodo consequat duis autem vel eum. Dynamicus qui sequitur mutationem consuetudium lectorum mirum, est notare quam littera gothica quam nunc putamus parum. Nobis eleifend option, congue nihil imperdiet doming id quod mazim placerat facer possim assum typi non?
         {% endblocktrans %}
     </p>
-    
-    <h2>About Basic Project</h2>
+    <h2>User Accounts &amp; Profiles</h2>
     <p>
         {% blocktrans %}
-        This project takes the account_project and adds profiles and notifications.
-        It is a foundation suitable for many sites that have user accounts with
-        profiles.
-        {% endblocktrans %}
+  Euismod tincidunt ut laoreet dolore magna aliquam erat. Dolor sit amet consectetuer, adipiscing elit sed diam nonummy nibh volutpat ut wisi enim ad minim. Feugiat nulla facilisis at vero; eros et accumsan et iusto odio dignissim.        {% endblocktrans %}
     </p>
     
     {% if user.is_authenticated %}
