--- a/core/accounts/templates/accounts/activate_fail.html
+++ b/core/accounts/templates/accounts/activate_fail.html
@@ -1,10 +1,7 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
-
-{% block title %}{% trans "Account activation failed." %}{% endblock %}
-{% block content_title %}<h2>{% trans "Your account could not be activated..." %}</h2>{% endblock %}
-
+{% extends "base.html" %}
+{% block title %}{% trans "Account activation failed" %} - {{ block.super }}{% endblock %}
 {% block content %}
+<h2>{% trans "Your account could not be activated..." %}</h2>
 <p>{% trans "Your account could not be activated. This could be because your activation link has aged." %}</p>
 <p>{% trans "Please try signing up again or contact us if you think something went wrong." %}</p>
 {% endblock %}
