--- a/core/accounts/templates/accounts/email_form.html
+++ b/core/accounts/templates/accounts/email_form.html
@@ -1,21 +1,15 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
+{% extends "accounts/base.html" %}
+{% block title %}{% trans "Change e-mail address" %} - {{ block.super }}{% endblock %}
 
-{% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
-
-{% block content %}
-<form action="" method="post">
-  <ul id="box-nav">
-    <li class="first"><a href="{% url accounts_profile_detail user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-    <li><a href="{% url accounts_profile_edit user.username %}">{% trans "Edit profile" %}</a></li>
-    <li><a href="{% url accounts_password_change user.username %}">{% trans "Change password" %}</a></li>
-    <li class="last selected"><a href="{% url accounts_email_change user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
+{% block main %}
+<form action="" method="post" class="form form-horizontal">
   {% csrf_token %}
   <fieldset>
-    <legend>{% trans "Change email address" %}</legend>
-    {{ form.as_p }}
+    <legend>{% trans "Change e-mail address" %}</legend>
+    {{ form|as_bootstrap }}
   </fieldset>
-  <input type="submit" value="{% trans "Change email" %}" />
+  <div class="form-actions">
+      <input type="submit" value="{% trans "Change email" %}" class="btn btn-primary" />    
+  </div>
 </form>
 {% endblock %}
