--- a/core/accounts/templates/accounts/password_complete.html
+++ b/core/accounts/templates/accounts/password_complete.html
@@ -1,9 +1,6 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
-
-{% block title %}{% trans "Password changed" %}{% endblock %}
-{% block content_title %}<h2>{% trans "Your password has been changed" %}.</h2>{% endblock %}
-
+{% extends "base.html" %}
+{% block title %}{% trans "Password changed" %} - {{ block.super }}{% endblock %}
 {% block content %}
+<h2>{% trans "Your password has been changed" %}</h2>
 <p>{% trans "From now on you can use your new password to signin" %}.</p>
 {% endblock %}
