--- a/core/accounts/templates/accounts/password_form.html
+++ b/core/accounts/templates/accounts/password_form.html
@@ -1,23 +1,15 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
+{% extends "accounts/base.html" %}
+{% block title %}{% trans "Change password" %} - {{ block.super }}{% endblock %}
 
-{% block title %}{% trans "Change password" %}{% endblock %}
-
-{% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
-
-{% block content %}
-<form action="" method="post" id="password_change_form">
-  <ul id="box-nav">
-    <li class="first"><a href="{% url accounts_profile_detail user.username %}"><span>{% trans 'View profile' %}</span></a></li>
-    <li><a href="{% url accounts_profile_edit user.username %}">{% trans "Edit profile" %}</a></li>
-    <li  class="selected"><a href="{% url accounts_password_change user.username %}">{% trans "Change password" %}</a></li>
-    <li class="last"><a href="{% url accounts_email_change user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
+{% block main %}
+<form action="" method="post" id="password_change_form" class="form form-horizontal">
+    {% csrf_token %}
   <fieldset>
     <legend>{% trans "Change Password" %}</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|as_bootstrap }}
   </fieldset>
-  <input type="submit" value="{% trans "Change password" %}" />
+  <div class="form-actions">
+    <input type="submit" value="{% trans "Change password" %}" class="btn btn-primary" />
+  </div>
 </form>
 {% endblock %}
