--- a/core/accounts/templates/accounts/password_reset_complete.html
+++ b/core/accounts/templates/accounts/password_reset_complete.html
@@ -1,9 +1,7 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
-
-{% block title %}{% trans "Password reset" %}{% endblock %}
-{% block content_title %}<h2>{% trans "Your password has been reset" %}</h2>{% endblock %}
+{% extends 'base.html' %}
+{% block title %}{% trans "Password reset" %} - {{ block.super }}{% endblock %}
 {% block content %}
-{% url accounts_signin as signin_url %}
-{% blocktrans %}You can now <a href="{{ signin_url }}">signin</a> with your new password.{% endblocktrans %}
+<h2>{% trans "Your password has been reset" %}</h2>
+<p>{% url accounts_signin as signin_url %}</p>
+<p>{% blocktrans %}You can now <a href="{{ signin_url }}">signin</a> with your new password.{% endblocktrans %}</p>
 {% endblock %}
