--- a/core/accounts/templates/accounts/profile_detail.html
+++ b/core/accounts/templates/accounts/profile_detail.html
@@ -1,27 +1,14 @@
-{% extends 'accounts/base_accounts.html' %}
-{% load i18n %}
-
+{% extends 'accounts/base.html' %}
 {% block title %}{% blocktrans with profile.user.username as username %}{{ username }}'s profile.{% endblocktrans %}{% endblock %}
-{% block content_title %}<h2>{{ profile.user.username }} {% if profile.user.get_full_name %}({{ profile.user.get_full_name }}){% endif %}</h2>{% endblock %}
 
-{% block content %}
+{% block main %}
   <div class="white-box">
-    {% block profile_navigation %}
-      {% comment %}Dirty hack. Will use django-guardian in the future.{% endcomment %}
-      {% if user.username == profile.user.username %}
-        <ul id="box-nav">
-          {% block profile_navigation_items %}
-            <li><a href="{% url accounts_profile_detail user.username %}">{% trans "View profile" %}</a></li>
-            <li><a href="{% url accounts_profile_edit user.username %}">{% trans "Edit details" %}</a></li>
-            <li><a href="{% url accounts_password_change user.username %}">{% trans "Change password" %}</a></li>
-            <li><a href="{% url accounts_email_change user.username %}">{% trans "Change email" %}</a></li>
-          {% endblock %}
-        </ul>
-      {% endif %}
-    {% endblock %}
-
     <div id="details">
       {% block profile_details %}
+      {% thumbnail user.get_profile.avatar "64x64" as im %}
+      <img src="{{ im.url }}" width="{{ im.x }}" height="{{ im.y }}" alt="{{ user }}" />
+      {% endthumbnail %}
+      
         <img class="mugshot" src="{{ profile.get_mugshot_url }}" alt="{% trans "Your mugshot" %}" />
         <dl>
           {% block profile_definition_list %}
