--- a/core/accounts/templates/accounts/signin_form.html
+++ b/core/accounts/templates/accounts/signin_form.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/base_accounts.html' %}
+{% extends 'base.html' %}
 {% load i18n %}
 
 {% block title %}{% trans "Sign In" %}{% endblock %}
