--- a/core/bootstrap/templates/_account_navbar.html
+++ b/core/bootstrap/templates/_account_navbar.html
@@ -4,7 +4,7 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% if user.first_name %}{{ user.first_name|escape }}{% else %}{{ user.username }}{% endif %} <span class="caret"></span></a>
 		<ul class="dropdown-menu">
-            <li><a href="{% url accounts_email_change %}">{% trans "Account" %}</a></li>
+            <li><a href="{% url accounts_email_change user %}">{% trans "Account" %}</a></li>
             {% if user.is_staff %}<li><a href="/admin/">{% trans "Admin" %}</a></li>{% endif %}
             <li class="divider"></li>
             <li><a href="{% url accounts_signout %}">{% trans "Logout" %}</a></li>
